--- a/Concurso - TIA - Regular/concurso-maqueta/styles.css
+++ b/Concurso - TIA - Regular/concurso-maqueta/styles.css
@@ -1,4 +1,3 @@
-/* General */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -8,11 +7,10 @@ body {
     color: #333;
 }
 
-/* Header */
 header {
     background: #333;
     color: white;
-    padding: 1rem 0;
+    padding: 1rem 0; /* 1x16px */
     text-align: center;
 }
 
@@ -23,21 +21,21 @@ header h1 {
 nav ul.menu {
     display: flex;
     justify-content: space-around;
-    list-style: none;
+    /* flex-direction: row-reverse; */
+    list-style: none; /*saco la viñeta*/
     padding: 0;
     margin: 0;
-}
-
-nav ul.menu li {
-    margin: 0 10px;
 }
 
 nav ul.menu a {
     color: white;
     text-decoration: none;
 }
+nav ul.menu li::first-letter{
+    color: red;
+}
 
-/* Main */
+
 main {
     padding: 1rem;
 }
@@ -47,6 +45,7 @@ main {
     gap: 2rem;
 }
 
+
 .flex-container article {
     flex: 2;
 }
@@ -55,16 +54,13 @@ main {
     flex: 1;
     background-color: #f4f4f4;
     padding: 1rem;
-    border: 1px solid #ddd;
-    
+    border: 1px solid #ddd;   
 }
 
 .flex-container aside a {
     text-decoration: none;
-    
 }
 
-/* Tablas */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -80,13 +76,16 @@ th, td {
     text-align: left;
 }
 
+tr:nth-child(2){ /*enesimo elemento hijo*/
+    color: red;
+}
+
 caption {
     caption-side: top;
     font-weight: bold;
     margin-bottom: 0.5rem;
 }
 
-/* Formulario */
 form {
     display: flex;
     flex-direction: column;
@@ -100,37 +99,32 @@ input, textarea, button {
     border-radius: 4px;
 }
 
-/* Highlight */
 .highlight {
     color: #007BFF;
     font-weight: bold;
 }
 
-/* Footer */
 footer {
     background: #333;
     color: white;
     text-align: center;
     padding: 1rem 0;
-    position: fixed; /* Lo fija en la pantalla */
+    position: fixed; 
     bottom: 0; /* Ubicación en la parte inferior */
-    width: 100%; /* Asegura que abarque todo el ancho */
+    width: 100%; 
     z-index: 10; /* Para asegurar que esté por encima de otros elementos */
 }
 
-/* Ajuste del Main para evitar que el footer solape contenido */
 main {
     padding-bottom: 6rem; /* Espacio adicional para que el contenido no sea tapado */
 }
 
-/* Cambiar el color del enlace al hacer clic (estado de foco) */
-a:focus {
-    color: red; /* Cambia a rojo o el color que prefieras */
-    outline: none; /* Opcional: elimina el contorno predeterminado */
+a:focus { /*interaccion*/
+    color: red; 
 }
 
 img {
-    max-width: 25%;
+    max-width: 40%;
     height: auto;  
     display: block;
     margin: 20px auto;
